--- a/netlify.toml
+++ b/netlify.toml
@@ -36,3 +36,10 @@ publish = "site"
   for = "assets/images/favicon.png"
   [headers.values]
     Cache-Control = "public, max-age=3600"
+
+
+[[redirects]]
+  from = "https://atlas.mclarenapplied.com/*"
+  to = "https://atlas.motionapplied.com/:splat"
+  status = 301
+  force = true
