--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: ATLAS Product Suite
-site_url: https://atlas.mclarenapplied.com/
+site_url: https://atlas.motionapplied.com/
 edit_uri: edit/main/docs/
 # repo_url: https://github.com/mat-docs/ATLAS.Site
 docs_dir: 'docs'
@@ -227,7 +227,7 @@ nav:
         - Sessions: extending-atlas/rta/introduction/sessions.md
         - Configuration: extending-atlas/rta/introduction/configuration.md
   - News and Release Notes: blog/index.md
-  - Downloads: https://portal.mclarenapplied.com/
+  - Downloads: https://portal.motionapplied.com/
   - Support: 
     - Troubleshooting: 
       - Profiling: key-functionality/visualise/atlas/troubleshooting/profiling.md
