--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,11 +44,11 @@ nav:
   - Key Functionality:
     - Overview: key-functionality/index.md
     - Store and Distribute:
-      - Overview: key-functionality/store/sqlrace/index.md
       - SQL Race:
+        - Overview: key-functionality/store/sqlrace/index.md
         - Getting Started: key-functionality/store/sqlrace/installation.md
         - Performance Guide: key-functionality/store/sqlrace/performance.md
-        - SQLRace vs SQLite: key-functionality/store/sqlrace/comparison.md
+        - SQL Race, SQLite & SSN2: key-functionality/store/sqlrace/comparison.md
       - Data Server:
         - Overview: key-functionality/store/ads/index.md
         # - Getting Started: key-functionality/store/ads/installation.md
@@ -116,7 +116,7 @@ nav:
       - Nuget: 
         - Overview: developer-resources/atlas/nuget/index.md
         - Setup Guide: developer-resources/atlas/nuget/setup.md
-      - SQLRace API: 
+      - SQL Race API: 
         - Overview: developer-resources/atlas/sql-race/index.md
         - Parameter Data Access: developer-resources/atlas/sql-race/parameter-data-access.md
         - .NET6 Upgrade: developer-resources/atlas/sql-race/net6-upgrade.md
