--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -88,6 +88,9 @@ nav:
           - Laps and Markers:
             - Markers: key-functionality/visualise/atlas/handling-data/laps-markers/markers.md
             - Laps: key-functionality/visualise/atlas/handling-data/laps-markers/laps.md
+          - Parameters:
+            - Overview: key-functionality/visualise/atlas/handling-data/parameters/index.md
+            - Using Parameters: key-functionality/visualise/atlas/handling-data/parameters/using-parameters.md
           - Exporting:
             - Overview: key-functionality/visualise/atlas/handling-data/export/index.md
             - Export Manager: key-functionality/visualise/atlas/handling-data/export/export-manager.md
