--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -100,7 +100,7 @@ nav:
         - Functions: 
           - Overview: key-functionality/visualise/atlas/functions/index.md
           - Function Editor: key-functionality/visualise/atlas/functions/function-editor.md
-          - Processing: key-functionality/visualise/atlas/functions/processing.md
+          - Processors: key-functionality/visualise/atlas/functions/processing.md
           - Using DLLs: key-functionality/visualise/atlas/functions/using-dlls.md
         - Alarms:
           - Overview: key-functionality/visualise/atlas/alarms/index.md
