--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,7 @@
 site_name: ATLAS Product Suite
 site_url: https://atlas.motionapplied.com/
+repo_url: https://github.com/mat-docs/ATLAS.Site
 edit_uri: edit/main/docs/
-# repo_url: https://github.com/mat-docs/ATLAS.Site
 docs_dir: 'docs'
 site_description: '"Comprehensive technical documentation for Motion Applied ATLAS. Covering custom displays, data integration, APIs, and developer tools'
 
@@ -274,7 +274,8 @@ nav:
         - Data Services: extending-atlas/rta/introduction/data-services.md
         - Sessions: extending-atlas/rta/introduction/sessions.md
         - Configuration: extending-atlas/rta/introduction/configuration.md
-  - News and Release Notes: blog/index.md
+  - News and Release Notes: 
+    - blog/index.md
   - Downloads: https://portal.motionapplied.com/
   - Support: 
     - Troubleshooting: 
@@ -316,10 +317,11 @@ extra:
       link: https://uk.linkedin.com/company/motionapplied
     - icon: fontawesome/solid/paper-plane
       link: mailto:sales@motionapplied.com
-  tags:
-    prototype: prototype
+  analytics:
+    provider: google
+    property: !ENV GOOGLE_ANALYTICS_KEY
 
 plugins:
-  - blog
   - search
   - tags
+  - blog
