--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -34,6 +34,9 @@ theme:
 extra_css:
   - stylesheets/extra.css
 
+hooks:
+  - overrides/hooks/shortcodes.py
+
 copyright: Copyright &copy; 2025 Motion Applied Ltd.
 
 nav:
@@ -287,6 +290,10 @@ markdown_extensions:
   - admonition
   - attr_list
   - codehilite
+  - pymdownx.details
+  - pymdownx.emoji:
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
   - def_list
   - footnotes
   - toc:
