--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -320,6 +320,17 @@ extra:
   analytics:
     provider: google
     property: !ENV GOOGLE_ANALYTICS_KEY
+  consent:
+  title: Cookie consent
+  description: >- 
+    We use cookies to recognize your repeated visits and preferences, as well
+    as to measure the effectiveness of our documentation and whether users
+    find what they're searching for. With your consent, you're helping us to
+    make our documentation better.
+  cookies:
+    analytics:
+      name: Google Analytics
+      checked: true
 
 plugins:
   - search
