--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -148,7 +148,7 @@ nav:
         - Example:                  https://github.com/mat-docs/System.Monitor.Configuration.API.Client.Sample/tree/main
         - Protocol Documentation:   developer-resources/secu4/configuration_api/docs.md
       - Support Library: 
-        - Home: developer-resources/secu4/support_library/reference docs/README.md
+        - Home: developer-resources/secu4/support_library/index.md
         - Core Modules:
           - Session Manager: developer-resources/secu4/support_library/reference docs/session-manager.md
           - Data Format Manager: developer-resources/secu4/support_library/reference docs/data-format-manager.md
