--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -149,7 +149,7 @@ nav:
         - Protocol Documentation:   developer-resources/secu4/configuration_api/docs.md
       - Support Library: 
         - Overview: developer-resources/secu4/support_library/reference docs/index.md
-        - Home: developer-resources/secu4/support_library/index.md
+        - #Home: developer-resources/secu4/support_library/index.md
         - Core Modules:
           - Session Manager: developer-resources/secu4/support_library/reference docs/session-manager.md
           - Data Format Manager: developer-resources/secu4/support_library/reference docs/data-format-manager.md
