--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -159,6 +159,15 @@ nav:
       - Nuget: 
         - Overview: developer-resources/atlas/nuget/index.md
         - Setup Guide: developer-resources/atlas/nuget/setup.md
+
+      - ATLAS Automation API:
+        - Overview: developer-resources/atlas/automation-api/index.md
+        - Getting Started: developer-resources/atlas/automation-api/getting-started.md
+        - Loading Sessions: developer-resources/atlas/automation-api/loading-sessions.md
+        - Working With Displays: developer-resources/atlas/automation-api/working-with-displays.md
+        - Timebase and Cursor Point: developer-resources/atlas/automation-api/timebase-cursor.md
+        - Working With Data: developer-resources/atlas/automation-api/working-with-data.md
+        - Transient Parameters: developer-resources/atlas/automation-api/writing-transient-parameters.md
       - SQL Race API: 
         - Overview: developer-resources/atlas/sql-race/index.md
         - Getting Started: developer-resources/atlas/sql-race/integration.md
