--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -37,7 +37,9 @@ extra_css:
 hooks:
   - overrides/hooks/shortcodes.py
 
-copyright: Copyright &copy; 2025 Motion Applied Ltd.
+copyright: >
+  Copyright &copy; 2025 Motion Applied Ltd. - 
+  <a href="#__consent">Change cookie settings</a>
 
 nav:
   - Introduction:
@@ -459,16 +461,16 @@ extra:
     provider: google
     property: !ENV GOOGLE_ANALYTICS_KEY
   consent:
-  title: Cookie consent
-  description: >- 
-    We use cookies to recognize your repeated visits and preferences, as well
-    as to measure the effectiveness of our documentation and whether users
-    find what they're searching for. With your consent, you're helping us to
-    make our documentation better.
-  cookies:
-    analytics:
-      name: Google Analytics
-      checked: true
+    title: Cookie consent
+    description: >- 
+      We use cookies to recognise your repeated visits and preferences, as well
+      as to measure the effectiveness of our documentation and whether users
+      find what they're searching for. With your consent, you're helping us to
+      make our documentation better.
+    cookies:
+      analytics:
+        name: Google Analytics
+        checked: true
 
 plugins:
   - search
