--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -144,7 +144,7 @@ nav:
         - Overview: key-functionality/process/vtag/index.md
         - Getting Started: key-functionality/process/vtag/getting-started.md
         - Operating vTAG Server: key-functionality/process/vtag/operating-vtag.md
-        - Live & Historic Usage: key-functionality/process/vtag/complete-system.md
+        - Live & Historical Usage: key-functionality/process/vtag/complete-system.md
     - Visualisation: 
       - Overview: key-functionality/visualise/atlas/index.md
       - ATLAS: 
